# github-actions-demo

./: CMakeLists.txt  README.md  docker-compose.yml  dockerfile
.github/workflows/: ci.yaml  deploy-production.yaml
src/: main.cpp
src/core/: system_monitor.cpp  system_monitor.h
src/utils/: utils.cpp  utils.h
tests/: CMakeLists.txt
